[package]
name = "gmail"
version = "0.1.1"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.25"
serde_json = "1.0.41"
base64 = "0.10.1"
email-format = "0.7.0"
chrono = "0.4.9"
