[package]
name = "gmail"
version = "1.0.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
base64 = "0.11.0"
email-format = "0.8.0"
chrono = "0.4.10"
hyper = "0.13.2"
tokio = { version = "0.2.13", features = ["full"] }
hyper-tls = "0.4.1"
